Adding difficulty levels to the Sudoku CSP.